[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docker-mcp"
version = "0.1.0"
description = "Docker MCP Server using sse transport"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
    "docker>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.hatch.build.targets.wheel]
packages = ["server.py"]

[tool.hatch.build.targets.sdist]
include = [
    "server.py",
    "README.md",
    "pyproject.toml",
]
